<resources>
    <string name="app_name">Healthy Advisor</string>
    <string name="title_home_page">Eat Healthy</string>
    <string name="para_home_page">Our Daily Health Meals Plans</string>
    <string name="diabetics_food">Diabetics Food</string>
    <string name="fitness_food">Fitness Food</string>
    <string name="diet_food">Diet Food</string>
    <string name="hypertensives_food">Hypertensive Food</string>
    <string name="search_icone">Search</string>
    <string name="my_favourite_title">My Favourits</string>
    <string name="my_favourite_para1">Your favourites list is empty!</string>
    <string name="my_favourite_para2">Explore food dishes and add them to favourite to show them here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>