<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".meals_empty_fragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/main_padding"
        android:text="@string/my_favourite_title"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_margin="@dimen/main_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_empty" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_favourite_para1"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:lineHeight="25dp"
            android:letterSpacing="0.1"
            android:layout_margin="@dimen/main_margin"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/textView6"
            android:letterSpacing="0.1"
            android:lineHeight="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_favourite_para2"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/main_margin"
            android:textColor="@color/light_white"
            android:textSize="14sp"/>
    </LinearLayout>

</LinearLayout>